deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-front
  labels:
    app: finance-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-front
  template:
    metadata:
      labels:
        app: finance-front
    spec:
      containers:
        - name: finance-front
          image: "ghcr.io/italo-jsm/finance-front:sha-d5000ff"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
