service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-front-service
  labels:
    app: finance-front
spec:
  selector:
    app: finance-front
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
