ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: finance.italomariano.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-app-service
                port:
                  number: 80
